apps/logging/templates/kibana-microgateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-microgateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
    - http:
        paths:
          - path: /kibana/
            pathType: Prefix
            backend:
              service:
                name: kibana-microgateway
                port:
                  number: 443
